--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,170 @@
 </head>
 
 <body class="page__body">
-  dsfsdf
+  <header class="header">
+    <nav class="header__navigation">
+      <ul class="header__list">
+        <li class="header__list-item">
+          <a href="https://www.eldorado.ru/" class="header__link header__link-e" target="__blank"></a>
+          <a href="https://www.mvideo.ru/" class="header__link header__link-m" target="__blank"></a>
+        </li>
+        <li class="header__list-item header__list-item-search">
+          <label for="page-search" class="visually-hidden">Поиск по сайту</label>
+          <input class="header__search" type="search" name="search" id="page-search" aria-label="Поиск по странице" placeholder="Название курса в одну строку">
+        </li>
+        <li class="header__list-item header__list-item-burger">
+          <button class="header__btn" type="button" aria-label="меню"></button>
+        </li>
+      </ul>
+      <div class="header__red-line"></div>
+    </nav>
+    <div class="header__article">Samsung Galaxy S10</div>
+  </header>
+  <main class="main">
+    <h1 class="main__heading">Еще больше возможностей</h1>
+    <section class="new-design">
+      <h2 class="new-design__heading">Новый дизайн</h2>
+      <div class="new-design__top-baner">
+        <p class="new-design__baner-text">
+          Абсолютно новый Infinity-O экран — на передней стороне смартфона нет ничего, кроме огромного экрана и фронтальной камеры.
+        </p>
+      </div>
+      <div class="new-design__mid-baner">
+        <div class="new-design__left-group">
+          <img class="new-design__colors" src="img/colors.jpg" alt="Цвета телефона" width="60" height="60">
+          <p class="new-design__text">
+            Смартфоны доступны в 4х стильных цветах: Перламутр, Аквамарин, Оникс и Цитрус
+            (для S10e).
+          </p>
+        </div>
+        <div class="new-design__right-group">
+          <img class="new-design__glass" src="img/gorilla-glass.jpg" alt="Защитное стекло" width="60" height="60">
+          <p class="new-design__text">
+            В моделях S10 и S10+ установлены защитные стекла нового поколения – Gorilla Glass 6.
+          </p>
+        </div>
+      </div>
+      <div class="new-design__bottom-baner">
+        <img class="new-design__phone" src="img/phone.jpg" alt="Телефоны Samsung" width="154" height="180">
+        <p class="new-design__bottom-baner-text">
+          Для любителей роскоши, модель S10+ будет выпускаться в керамическом корпусе черного и белого цветов.
+        </p>
+      </div>
+    </section>
+    <section class="video-shooting">
+      <h2 class="video-shooting__heading">Съемка видео</h2>
+      <div class="video-shooting__img"></div>
+      <div class="video-shooting__advantages">
+        <div class="video-shooting__advantages-card-1">
+          <svg width="101" height="60" viewBox="0 0 101 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M45 21.6995L59.9409 30L45 38.3005L45 21.6995Z" stroke="#319559" stroke-width="2"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M60.969 9.26687L67.2911 20.217C67.4094 20.4136 67.5242 20.6125 67.6355 20.8136L70.63 26.0001L72.7124 22.3933C70.6895 16.6189 66.4282 11.8966 60.969 9.26687ZM55.2698 7.39558C53.8862 7.13585 52.459 7 51 7C46.1907 7 41.7261 8.47611 38.0346 11H50.9999H57.3508L55.2698 7.39558ZM73.9362 28.2736L67.6318 39.1931C67.5229 39.3897 67.4106 39.5842 67.295 39.7765L64.2792 45H68.4361C71.9037 40.9729 74 35.7312 74 30C74 29.4193 73.9785 28.8435 73.9362 28.2736ZM63.9654 49H50.9999H44.6493L46.7303 52.6044C48.1139 52.8642 49.5411 53 51 53C55.8093 53 60.2739 51.5239 63.9654 49ZM41.0312 50.7332L34.7158 39.7947C34.5927 39.5904 34.4733 39.3836 34.3577 39.1744L31.3702 34L29.2877 37.607C31.3107 43.3813 35.572 48.1036 41.0312 50.7332ZM28.0638 31.7268L34.3586 20.824C34.4736 20.6159 34.5924 20.4101 34.7149 20.2068L37.7211 15H33.5639C30.0963 19.0271 28 24.2688 28 30C28 30.5809 28.0215 31.1567 28.0638 31.7268Z" fill="#7981FB"/>
+          </svg>
+          <p class="video-shooting__advantages-text">
+            Отличное качество съемки новых поколениесмартфонов Samsung позволит создать и смотреть праздники, семейные торжества и памятные моменты на огромном экране, с яркими, живыми цветами и прекрасной детализацией.
+          </p>
+        </div>
+        <div class="video-shooting__advantages-card-2">
+          <svg width="101" height="71" viewBox="0 0 101 71" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <mask id="path-1-inside-1" fill="white">
+            <path d="M24 53C24 61.2843 30.7157 68 39 68V70C29.6112 70 22 62.3888 22 53H24Z"/>
+            <path d="M78 29C78 20.7157 71.2843 14 63 14V12C72.3888 12 80 19.6112 80 29H78Z"/>
+            <path d="M28 53C28 59.0751 32.9249 64 39 64V66C31.8203 66 26 60.1797 26 53H28Z"/>
+            <path d="M74 29C74 22.9249 69.0751 18 63 18V16C70.1797 16 76 21.8203 76 29H74Z"/>
+            <path d="M63 22C66.866 22 70 25.134 70 29H72C72 24.0294 67.9706 20 63 20V22Z"/>
+            <path d="M39 60C35.134 60 32 56.866 32 53H30C30 57.9706 34.0294 62 39 62V60Z"/>
+            </mask>
+            <path d="M39 68H41V66H39V68ZM24 53H26V51H24V53ZM63 14H61V16H63V14ZM78 29H76V31H78V29ZM39 70V72H41V70H39ZM22 53V51H20V53H22ZM63 12V10H61V12H63ZM80 29V31H82V29H80ZM39 64H41V62H39V64ZM28 53H30V51H28V53ZM63 18H61V20H63V18ZM74 29H72V31H74V29ZM39 66V68H41V66H39ZM26 53V51H24V53H26ZM63 16V14H61V16H63ZM76 29V31H78V29H76ZM70 29H68V31H70V29ZM63 22H61V24H63V22ZM32 53H34V51H32V53ZM39 60H41V58H39V60ZM72 29V31H74V29H72ZM63 20V18H61V20H63ZM30 53V51H28V53H30ZM39 62V64H41V62H39ZM39 66C31.8203 66 26 60.1797 26 53H22C22 62.3888 29.6112 70 39 70V66ZM63 16C70.1797 16 76 21.8203 76 29H80C80 19.6112 72.3888 12 63 12V16ZM39 68C30.7157 68 24 61.2843 24 53H20C20 63.4934 28.5066 72 39 72V68ZM63 14C71.2843 14 78 20.7157 78 29H82C82 18.5066 73.4934 10 63 10V14ZM39 62C34.0294 62 30 57.9706 30 53H26C26 60.1797 31.8203 66 39 66V62ZM63 20C67.9706 20 72 24.0294 72 29H76C76 21.8203 70.1797 16 63 16V20ZM39 64C32.9249 64 28 59.0751 28 53H24C24 61.2843 30.7157 68 39 68V64ZM63 18C69.0751 18 74 22.9249 74 29H78C78 20.7157 71.2843 14 63 14V18ZM72 29C72 24.0294 67.9706 20 63 20V24C65.7614 24 68 26.2386 68 29H72ZM30 53C30 57.9706 34.0294 62 39 62V58C36.2386 58 34 55.7614 34 53H30ZM74 29C74 22.9249 69.0751 18 63 18V22C66.866 22 70 25.134 70 29H74ZM28 53C28 59.0751 32.9249 64 39 64V60C35.134 60 32 56.866 32 53H28ZM32 51H30V55H32V51ZM28 51H26V55H28V51ZM24 51H22V55H24V51ZM37 60V62H41V60H37ZM37 64V66H41V64H37ZM37 68V70H41V68H37ZM70 31H72V27H70V31ZM74 31H76V27H74V31ZM78 31H80V27H78V31ZM65 22V20H61V22H65ZM65 18V16H61V18H65ZM65 14V12H61V14H65Z" fill="#5FBAFF" mask="url(#path-1-inside-1)"/>
+            <path d="M37 31C37 28.7909 38.7909 27 41 27H61C63.2091 27 65 28.7909 65 31V51C65 53.2091 63.2091 55 61 55H41C38.7909 55 37 53.2091 37 51V31Z" stroke="#E83D43" stroke-width="2"/>
+            <circle cx="51" cy="41" r="5" stroke="#E83D43" stroke-width="2"/>
+            <circle cx="58.5" cy="33.5" r="1.5" fill="#E83D43"/>
+          </svg>
+          <p class="video-shooting__advantages-text">
+            Дополнительная система стабилизации сделает видеоролики плавными и красивыми.
+          </p>
+        </div>
+        <div class="video-shooting__advantages-card-3">
+          <svg width="101" height="60" viewBox="0 0 101 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="33" cy="30" r="11" stroke="#D6EADE" stroke-width="2"/>
+            <circle cx="43" cy="30" r="13" fill="white" fill-opacity="0.25" stroke="#ADD5BD" stroke-width="2"/>
+            <circle cx="53" cy="30" r="15" fill="white" fill-opacity="0.5" stroke="#83BF9B" stroke-width="2"/>
+            <circle cx="63" cy="30" r="17" fill="white" fill-opacity="0.75" stroke="#319559" stroke-width="2"/>
+          </svg>
+          <p class="video-shooting__advantages-text">
+            Сверхзамедленная съемка (960 кадров в секунду) теперь в 2 раза дольше. Камера в S10 способна распознать  самое стремительное движение, такое как языки пламени, брызги воды, дым из под колес спорткара.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="accessories">
+      <h2 class="accessories__heading">Аксессуары</h2>
+      <div class="accessories__group-1">
+        <p class="accessories__group-1-text">
+          Обширный ассортимент чехлов лля каждой модели. Цветовая гамма, отличное качество, премиальные материалы и дополнительные возможности призваны удовлетворить даже самый притязательный вкус.
+        </p>
+      </div>
+      <div class="accessories__group-2">
+        <p class="accessories__group-2-text">
+          Беспроводная зарядная станция Duo Pad быстро заряжает одновременно два устройства, одно из которых охлаждается.
+        </p>
+      </div>
+      <div class="accessories__group-3">
+        <div class="accessories__left">
+          <div class="accessories__line">
+            <div class="accessories__line-dark"></div>
+          </div>
+          <p class="accessories__left-text">
+            Galaxy S10+ в режиме Dex поддерживает широкоформатные мониторы. Мощный смартфон превращается в мощный десктоп.
+          </p>
+        </div>
+        <div class="accessories__right">
+          <div class="accessories__line">
+            <div class="accessories__line-dark"></div>
+          </div>
+          <p class="accessories__right-text">
+            Смартфон S10 сразу укомплектован защитной пленкой.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="apps">
+      <h2 class="apps__heading">
+        Приложения и сервисы Samsung
+      </h2>
+      <div class="apps__group">
+        <img src="img/apps-1.png" alt="Samsung" width="75" height="60">
+        <p class="apps__group-text">
+          Благодаря приложению Smart Switch можно перенести информацию со старого смартфона на новый.
+        </p>
+      </div>
+      <div class="apps__group">
+        <img src="img/apps-2.png" alt="Samsung" width="75" height="60">
+        <p class="apps__group-text">
+          Приложение Samsung Health помогает контролировать физическую активность и вести дневник питания.
+        </p>
+      </div>
+      <div class="apps__group">
+        <img src="img/apps-3.png" alt="Samsung" width="75" height="60">
+        <p class="apps__group-text">
+          Интеллектуальный помощник Bixby обеспечит быстрый доступ к переводчику, поиску в Интернете, покупкам и многому другому.
+        </p>
+      </div>
+      <div class="apps__group">
+        <img src="img/apps-4.png" alt="Samsung" width="75" height="60">
+        <p class="apps__group-text">
+          Приложение Samsung Pay дает возможность оплачивать свои покупки при помощи смартфона.
+        </p>
+      </div>
+      <div class="apps__group">
+        <img src="img/apps-5.png" alt="Samsung" width="75" height="60">
+        <p class="apps__group-text">
+          Благодаря приложению Smart Things можно управлять всеми смарт-устройствами дома.
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <script src="js/script.js"></script>
 </body>
 
 </html>
